# shard

./: .dockerignore  .gitignore  404.html  AGENTS.md  ANTIGRAVITY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  REPORT.md  SECURITY.md  architecture.html  cli.html  docker-compose.yml  exhaustive_test.sh  getting-started.html  index.html  introduction.html  print.html  protocol.html  searcher-09f2665d.js  searchindex-69d8d7f4.js  searchindex-fa2a3422.js  searchindex-ffc536ef.js  session-ses_1b40.md  stress_test.sh  test.txt  toc-50be9360.js  toc.html  verify_cleanup.sh
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: METHODOLOGY.md  README.md  benchmark.sh  p2p_bench.sh
cmd/shard/: Cargo.toml
cmd/shard-cli/: Cargo.toml
cmd/shard-cli/src/: main.rs
cmd/shard-cli/tests/: integration.rs
cmd/shard/src/: main.rs
cmd/shard/tests/: integration.rs
core/: Cargo.toml
core/benches/: chunker.rs  compression.rs
core/examples/: shard-basics.rs
core/src/: api.rs  branch.rs  chunker.rs  commit.rs  compression.rs  config.rs  encryption.rs  gc.rs  index.rs  keychain.rs  lib.rs  manifest.rs  metadata.rs  metrics.rs  ops.rs  partial.rs  store.rs  wal.rs
core/src/store/: flat.rs  mod.rs  sled.rs  sqlite.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: book.toml  protocol.md
docs/src/: SUMMARY.md  architecture.md  cli.md  getting-started.md  introduction.md  protocol.md
examples/: shard-basics.rs
net/: Cargo.toml
net/src/: lib.rs  p2p.rs  protocol.rs
python/shard-py/: Cargo.toml  README.md  pyproject.toml
python/shard-py/src/: lib.rs
scripts/: install.ps1  install.sh  run-local-nodes.sh
storage/: Cargo.toml
storage/src/: lib.rs
test_env/node_a/: hello.txt
tests/: Cargo.toml  README.md  tests.rs
