[workspace]
members = [
    "cmd/shard-cli",
    "core",
    "net",
    "crypto",
    "storage",
    "tests",
    "python/shard-py",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ed25519-dalek = "2.0"
hex = "0.4"
tempfile = "3.8"
walkdir = "2.4"
time = "0.3"
tar = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
rand = "0.8"
similar = "2"
ciborium = "0.2"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
chrono = "0.4"
