[package]
name = "shard-core"
version = "0.1.0"
edition = "2021"
description = "Core library for shard distributed VCS: chunking, compression, commits, branching, merging, WAL"
license = "MIT"
repository = "https://github.com/sandy-sachin7/shard"
homepage = "https://github.com/sandy-sachin7/shard"
keywords = ["vcs", "version-control", "mlops", "distributed", "content-addressed"]
categories = ["version-control", "compression"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
shard-crypto = { path = "../crypto" }
shard-storage = { path = "../storage" }
shard-net = { path = "../net" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
zstd = { version = "0.13", default-features = false }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = { workspace = true }
tracing = "0.1.44"
