[package]
name = "shard-net"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
libp2p = { version = "0.53", features = ["tcp", "dns", "quic", "noise", "yamux", "gossipsub", "kad", "request-response", "cbor", "json", "macros", "tokio", "mdns", "identify", "ping"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = "0.3"
tracing = "0.1.44"
blake3.workspace = true
ed25519-dalek.workspace = true

