[package]
name = "shard-net"
version = "1.0.2"
edition = "2021"
description = "libp2p networking for shard distributed VCS (TCP/Noise/Yamux, mDNS, Kademlia, Gossipsub)"
license = "MIT"
repository = "https://github.com/sandy-sachin7/shard"
homepage = "https://github.com/sandy-sachin7/shard"
keywords = ["vcs", "version-control", "mlops", "distributed", "libp2p"]
categories = ["network-programming"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
libp2p = { version = "0.53", features = ["tcp", "dns", "quic", "noise", "yamux", "gossipsub", "kad", "request-response", "cbor", "json", "macros", "tokio", "mdns", "identify", "ping"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = "0.3"
tracing = "0.1.44"
blake3.workspace = true
ed25519-dalek.workspace = true

