[package]
name = "shard-storage"
version = "2.2.0"
edition = "2021"
description = "Storage backends for shard distributed VCS (sled, sqlite, flat file)"
license = "MIT"
repository = "https://github.com/sandy-sachin7/shard"
homepage = "https://github.com/sandy-sachin7/shard"
keywords = ["vcs", "version-control", "mlops", "distributed", "storage"]
categories = ["database"]

[dependencies]
anyhow = { workspace = true }
sled = "0.34"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
