[package]
name = "shard"
version = "0.1.0"
edition = "2021"

[dependencies]
shard-core = { path = "../../core" }
shard-crypto = { path = "../../crypto" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = { workspace = true }
walkdir = { workspace = true }
serde_json = { workspace = true }
