[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "shard-py"
version = "2.0.0"
description = "Python binding for Shard — the distributed VCS built for ML workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Santhosh Sachin", email = "santhosh.s.sachin@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "shard._core"